--- a/02_glassbox/02_tutorial_nb_part1_empty.ipynb
+++ b/02_glassbox/02_tutorial_nb_part1_empty.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3e4b241e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "248acf65",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "4         1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e798643b",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fafb9e01",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "71ca2701",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7fef9693",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,11 @@
    "source": [
     "### Questions\n",
     "\n",
-    "**Q 1.1 – Evaluate the model performance.**\n",
+    "**Q 1.1a – Evaluate the model performance using the confusion matrix and reported metrics.**\n",
+    "\n",
+    "**Q 1.1b – Given that less that the survival rate is less tha 40%, is accuracy an appropriate primarty metric for this dataset? Name at least one risk of relying solely on accuracy.**\n",
+    "\n",
+    "**Q 1.1c – Based on the confusion matrix, does the model show any systemic bias? Specifically, compare the model's performance on predicting deaths versus prediting survival. What might explain this difference?**\n",
     "\n",
     "..."
    ]
@@ -397,15 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "2d64b2da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/5971464928/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/5971464928/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/6057386576/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/6057386576/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -427,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f12afc31",
    "metadata": {},
    "outputs": [
@@ -435,13 +439,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Sex_1: -2.5861\n",
-      "2. Pclass_2: -1.953\n",
-      "3. Pclass_1: -0.686\n",
+      "1. Sex_1: -2.5858\n",
+      "2. Pclass_2: -1.9527\n",
+      "3. Pclass_1: -0.6859\n",
       "4. SibSp: -0.3523\n",
-      "5. Embarked_2: -0.2365\n",
-      "6. Embarked_1: 0.0994\n",
-      "7. Parch: -0.0703\n",
+      "5. Embarked_2: -0.2363\n",
+      "6. Embarked_1: 0.0993\n",
+      "7. Parch: -0.0704\n",
       "8. Age: -0.0377\n",
       "9. Fare: 0.0043\n"
      ]
@@ -484,15 +488,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "73b9f73e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/5992877360/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/5992877360/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/6076442272/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/6076442272/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -534,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "5548996a",
    "metadata": {},
    "outputs": [],
@@ -561,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "0cbab803",
    "metadata": {},
    "outputs": [],
@@ -582,10 +586,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ee551382",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix : \n",
+      " gam_pred   0   1\n",
+      "y_test          \n",
+      "0         95  15\n",
+      "1         22  47\n",
+      "\n",
+      "Accuracy  = 0.7933\n",
+      "F1 score  = 0.7176\n"
+     ]
+    }
+   ],
    "source": [
     "# Confusion matrix\n",
     "cm = pd.crosstab(y_results['y_test'], y_results['gam_pred'])\n",
@@ -607,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "10e2df74",
    "metadata": {
     "scrolled": true
@@ -630,7 +649,7 @@
       "Feature Function                  Lambda               Rank         EDoF         P > x        Sig. Code   \n",
       "================================= ==================== ============ ============ ============ ============\n",
       "s(0)                              [0.6]                20           9.1          5.07e-03     **          \n",
-      "s(1)                              [0.6]                20           4.0          2.44e-03     **          \n",
+      "s(1)                              [0.6]                20           4.1          2.44e-03     **          \n",
       "s(2)                              [0.6]                20           4.8          6.06e-01                 \n",
       "s(3)                              [0.6]                20           4.1          1.06e-01                 \n",
       "f(4)                              [0.6]                2            0.9          0.00e+00     ***         \n",
@@ -669,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "34923c08",
    "metadata": {},
    "outputs": [],
@@ -680,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "f6aa577f",
    "metadata": {},
    "outputs": [],
@@ -700,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "bc9329d7",
    "metadata": {},
    "outputs": [
@@ -755,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "af325820",
    "metadata": {
     "scrolled": true
@@ -764,8 +783,8 @@
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/6011664752/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/6011664752/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/6076812928/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/6076812928/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -787,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "80d40f8b",
    "metadata": {},
    "outputs": [
@@ -853,15 +872,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "3ae54984",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/6009869120/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/6009869120/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/6080241520/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/6080241520/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -910,10 +929,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "e6f17ca0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DistanceMetric' from 'sklearn.neighbors' (/Users/adialumadjeng/Projects/trustworthy_ai/02_glassbox/part1_venv/lib/python3.9/site-packages/sklearn/neighbors/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m1\u001b[39m, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mdirname(os\u001b[38;5;241m.\u001b[39mgetcwd())\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/pydl8.5-lbguess\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdl85\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DL85Classifier\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mfsdt_helpers\u001b[39;00m \n",
+      "File \u001b[0;32m~/Projects/trustworthy_ai/02_glassbox/part1_venv/lib/python3.9/site-packages/dl85/__init__.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msupervised\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclassifiers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclassifier\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DL85Classifier\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredictors\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredictor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DL85Predictor\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01munsupervised\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclustering\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DL85Cluster\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_version\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[1;32m      6\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__version__\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDL85Predictor\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDL85Classifier\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDL85Cluster\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[0;32m~/Projects/trustworthy_ai/02_glassbox/part1_venv/lib/python3.9/site-packages/dl85/unsupervised/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclustering\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DL85Cluster\n",
+      "File \u001b[0;32m~/Projects/trustworthy_ai/02_glassbox/part1_venv/lib/python3.9/site-packages/dl85/unsupervised/clustering.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ClusterMixin\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvalidation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m assert_all_finite, check_array\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DistanceMetric\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredictors\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredictor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DL85Predictor\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DistanceMetric' from 'sklearn.neighbors' (/Users/adialumadjeng/Projects/trustworthy_ai/02_glassbox/part1_venv/lib/python3.9/site-packages/sklearn/neighbors/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "sys.path.insert(1, os.path.dirname(os.getcwd())+'/pydl8.5-lbguess')\n",
     "from dl85 import DL85Classifier\n",
@@ -922,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b50cca2f",
    "metadata": {},
    "outputs": [
@@ -951,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "b6ecd86d",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6a769821",
    "metadata": {},
    "outputs": [
@@ -1279,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ef7e18bc",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "85175633",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ab856189",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "de66bf9c",
    "metadata": {},
    "outputs": [],
@@ -1397,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "df45c027",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "55ec4ef0",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "e70463c8",
    "metadata": {},
    "outputs": [],
@@ -1550,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "bf1968db",
    "metadata": {},
    "outputs": [],
@@ -1570,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "b83f8848",
    "metadata": {},
    "outputs": [
@@ -1622,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "670a3746",
    "metadata": {},
    "outputs": [],
@@ -1633,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "33c435b2",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "53d28ab0",
    "metadata": {},
    "outputs": [
