--- a/02_glassbox/02_tutorial_nb_part2_empty.ipynb
+++ b/02_glassbox/02_tutorial_nb_part2_empty.ipynb
@@ -75,10 +75,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "248acf65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex_1</th>\n",
+       "      <th>Embarked_1</th>\n",
+       "      <th>Embarked_2</th>\n",
+       "      <th>Pclass_1</th>\n",
+       "      <th>Pclass_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.6292</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77.9583</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Age  SibSp  Parch     Fare  Sex_1  Embarked_1  Embarked_2  Pclass_1  \\\n",
+       "0  29.699118      0      0   7.6292      0           1           0         0   \n",
+       "1  29.699118      0      0   8.0500      1           0           1         0   \n",
+       "2  29.699118      0      0   7.7500      0           1           0         0   \n",
+       "3  51.000000      1      0  77.9583      0           0           1         0   \n",
+       "4  21.000000      0      0   7.7333      1           1           0         0   \n",
+       "\n",
+       "   Pclass_2  \n",
+       "0         1  \n",
+       "1         1  \n",
+       "2         1  \n",
+       "3         0  \n",
+       "4         1  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# X_train \n",
     "X_train = pd.read_csv('../datasets/titanic/encoded_titanic_X_train.csv')\n",
@@ -225,10 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eb21093b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix : \n",
+      " rug_pred    0   1\n",
+      "y_test           \n",
+      "0         102   8\n",
+      "1          29  40\n",
+      "\n",
+      "Accuracy  = 0.7933\n",
+      "F1 score  = 0.6838\n"
+     ]
+    }
+   ],
    "source": [
     "# Confusion matrix\n",
     "cm = pd.crosstab(y_results['y_test'], y_results['rug_pred'])\n",
@@ -267,10 +400,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dca05827",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of rules: 18\n",
+      "Average rule length: 2.28\n"
+     ]
+    }
+   ],
    "source": [
     "exp = Explainer(rug)\n",
     "summary = exp.summarize_rule_metrics()"
@@ -278,10 +420,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1dae5efe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RULE 0:\n",
+      "2.50      < Age       <= inf       or null\n",
+      "-inf      < Pclass_2  <= 0.50      or null\n",
+      "-inf      < Sex_1     <= 0.50      and not null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 1.0000\n",
+      "\n",
+      "RULE 1:\n",
+      "-inf      < Age       <= 7.00      and not null\n",
+      "-inf      < SibSp     <= 2.50      or null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 0.6667\n",
+      "\n",
+      "RULE 2:\n",
+      "-inf      < Sex_1     <= 0.50      and not null\n",
+      "8.04      < Fare      <= 14.85     and not null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.6667\n",
+      "\n",
+      "RULE 3:\n",
+      "0.96      < Age       <= 2.50      or null\n",
+      "-inf      < Pclass_1  <= 0.50      or null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.6667\n",
+      "\n",
+      "RULE 4:\n",
+      "-inf      < Age       <= 1.50      and not null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 0.6667\n",
+      "\n",
+      "RULE 5:\n",
+      "-inf      < Age       <= 11.50     and not null\n",
+      "-inf      < Embarked_2 <= 0.50      and not null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.6667\n",
+      "\n",
+      "RULE 6:\n",
+      "13.50     < Age       <= inf       or null\n",
+      "-inf      < Fare      <= 26.14     or null\n",
+      "0.50      < Sex_1     <= inf       or null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 7:\n",
+      "-inf      < Age       <= 13.50     and not null\n",
+      "-inf      < Fare      <= 26.14     or null\n",
+      "0.50      < Sex_1     <= inf       or null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 8:\n",
+      "19.86     < Fare      <= 31.33     and not null\n",
+      "0.50      < Parch     <= inf       and not null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 9:\n",
+      "17.43     < Fare      <= inf       and not null\n",
+      "12.00     < Age       <= inf       or null\n",
+      "0.50      < Pclass_1  <= inf       and not null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 10:\n",
+      "24.81     < Fare      <= inf       and not null\n",
+      "0.50      < Pclass_2  <= inf       and not null\n",
+      "-inf      < Sex_1     <= 0.50      and not null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 11:\n",
+      "54.50     < Age       <= inf       and not null\n",
+      "14.85     < Fare      <= inf       or null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 12:\n",
+      "77.01     < Fare      <= inf       and not null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 13:\n",
+      "-inf      < Fare      <= 24.81     or null\n",
+      "0.50      < Pclass_2  <= inf       and not null\n",
+      "-inf      < Sex_1     <= 0.50      and not null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 14:\n",
+      "37.00     < Fare      <= 52.28     and not null\n",
+      "-inf      < Pclass_1  <= 0.50      or null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 15:\n",
+      "52.28     < Fare      <= 59.19     and not null\n",
+      "-inf      < Pclass_1  <= 0.50      or null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 16:\n",
+      "2.50      < SibSp     <= inf       and not null\n",
+      "26.14     < Fare      <= inf       and not null\n",
+      "0.50      < Sex_1     <= inf       or null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n",
+      "RULE 17:\n",
+      "-inf      < Age       <= 12.00     and not null\n",
+      "0.50      < Pclass_1  <= inf       and not null\n",
+      "Class: 1\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rules = exp.retrieve_rule_details(list(feature_names))"
    ]
@@ -309,20 +571,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7ad67f99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances not covered by any rule: 12\n",
+      "Average number of rules per sample: 1.37\n",
+      "Average length of rules per sample: 2.53\n"
+     ]
+    }
+   ],
    "source": [
     "rule_coverage_metrics = exp.evaluate_rule_coverage_metrics(X_test, info=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ad6324ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True and predicted values for sample at index 9:\n",
+      "y_test      1\n",
+      "rug_pred    0\n",
+      "Name: 9, dtype: int64 \n",
+      "\n",
+      "Sample 9 features:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex_1</th>\n",
+       "      <th>Embarked_1</th>\n",
+       "      <th>Embarked_2</th>\n",
+       "      <th>Pclass_1</th>\n",
+       "      <th>Pclass_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age  SibSp  Parch  Fare  Sex_1  Embarked_1  Embarked_2  Pclass_1  Pclass_2\n",
+       "9  19.0      0      0  8.05      1           0           1         0         1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i = 9\n",
     "print(f'True and predicted values for sample at index {i}:')\n",
@@ -333,10 +676,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a2974ab0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rules for instance 0\n",
+      "RULE 6:\n",
+      "13.50     < Age       <= inf       or null\n",
+      "-inf      < Fare      <= 26.14     or null\n",
+      "0.50      < Sex_1     <= inf       or null\n",
+      "Class: 0\n",
+      "Scaled rule weight: 0.3333\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[6]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "exp.find_applicable_rules_for_samples(X_test.iloc[[i]], feature_names=list(feature_names), info=True)"
    ]
@@ -362,7 +730,7 @@
   "kernelspec": {
    "display_name": "part2_venv",
    "language": "python",
-   "name": "part2_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -374,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
