--- a/03_unboxing/02_assignment_empty.ipynb
+++ b/03_unboxing/02_assignment_empty.ipynb
@@ -7,17 +7,9 @@
    "source": [
     "# Assignment 02\n",
     "\n",
-    "### Deadline: February 27th 2025, 10:00 AM\n",
+    "### Deadline: No deadline (no submission needed)\n",
     "\n",
-    "### Deliverables:\n",
-    "Please submit, via Canvas, a **zip file** including the following:\n",
-    "- a .ipynb file (you can use this one) with all of your code included -- `02_assignment_surname1_surname2.ipynb`\n",
-    "- a compiled .html file of your .ipynb which includes all of the output -- `02_assignment_surname1_surname2.html`\n",
-    "- a pdf file with your written answers to the questions -- `02_assignment_surname1_surname2.pdf`\n",
-    "\n",
-    "Make sure to follow the naming convention indicated above. The zip name can be named `02_assignment_surname1_surname2`.\n",
-    "\n",
-    "Make sure to annotate your code. We may substract points if code is not annotated and unclear."
+    "### Deliverables:Quiz during next tutorial"
    ]
   },
   {
@@ -391,9 +383,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trustworthy_ai_prep_venv",
+   "display_name": "week3_venv",
    "language": "python",
-   "name": "trustworthy_ai_prep_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -405,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
